Alex Michelon\Banco de Dados Até Semana 3 - Sem Inserts

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ Avaliacao_Final_Growdev_MatEst.ipynb
 00-onboarding/
 0-orientacao_profissional/
 01-introducao_a_dados/
-08-banco_de_dados/
+exemplo/
+exportados/
