--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ versionados/
 *.doc
 *.docx
 *.zip
+#*.csv
 Avaliacao_Final_Growdev_MatEst.ipynb
 00-onboarding/
 0-orientacao_profissional/
@@ -14,3 +15,5 @@ Avaliacao_Final_Growdev_MatEst.ipynb
 exemplo/
 exportados/
 enviado/
+imagem/
+#arquivo/
